--- a/src/components/blog/BlogDetail/BlogDetail.css
+++ b/src/components/blog/BlogDetail/BlogDetail.css
@@ -24,10 +24,10 @@
 
 @media screen and (max-width: 900px) {
   .title-Text {
-    font-size: 3.5vw;
+    font-size: 16px;
   }
 
   .p-Text {
-    font-size: 2.5vw;
+    font-size: 12px;
   }
 }
